fdo#68874: Highlighter icon doesn't change color if no text is selected

the problem is that bChoiceFromPalette becomes false too early when StateChanged
is called with nSID=SID_ATTR_CHAR_COLOR_BACKGROUND_EXT (we don't handle it in the
switch) and the following call with nSID=SID_ATTR_CHAR_COLOR_BACKGROUND (which
we actually want to handle) is no-op.

Change-Id: I024f6a443535411648bda44576e838c3d863e7de